Bug 247859 - Marble creates QPixMaps in a non-GUI thread when loading a KML file
Summary: Marble creates QPixMaps in a non-GUI thread when loading a KML file
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.4 (KDE 4.9)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-14 16:58 UTC by Volker Lanz
Modified: 2012-05-18 12:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE 4.9.0 / Marble 1.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lanz 2010-08-14 16:58:26 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Loading a KML file produced by Workout or gpsbabel, Marble generates this debug output:

QPixmap: It is not safe to use pixmaps outside the GUI thread


Reproducible: Always
Comment 1 Dennis Nienhüser 2012-05-18 12:09:23 UTC
Git commit f27225e6b30864301f095038f79ce859b55b0610 by Dennis Nienhüser.
Committed on 18/05/2012 at 14:08.
Pushed by nienhueser into branch 'master'.

Fix 'QPixmap: It is not safe to use pixmaps outside the GUI thread'

M  +1    -1    src/lib/MarbleWidgetPopupMenu.cpp
M  +2    -2    src/lib/PlacemarkPainter.cpp
M  +1    -1    src/lib/VisiblePlacemark.cpp
M  +2    -2    src/lib/VisiblePlacemark.h
M  +44   -44   src/lib/geodata/data/GeoDataFeature.cpp
M  +1    -1    src/lib/geodata/data/GeoDataFeature.h
M  +1    -1    src/lib/geodata/data/GeoDataFeature_p.h
M  +7    -7    src/lib/geodata/data/GeoDataIconStyle.cpp
M  +3    -3    src/lib/geodata/data/GeoDataIconStyle.h
M  +2    -2    src/lib/geodata/data/GeoDataStyle.cpp
M  +1    -1    src/lib/geodata/data/GeoDataStyle.h

http://commits.kde.org/marble/f27225e6b30864301f095038f79ce859b55b0610