Fix 'QPixmap: It is not safe to use pixmaps outside the GUI thread'

BUG: 247859