src/lib/geodata/data/GeoDataIconStyle.h
@@ -31,7 +31,7 @@ class GEODATA_EXPORT GeoDataIconStyle : public GeoDataColorStyle
   public:
     GeoDataIconStyle();
     GeoDataIconStyle( const GeoDataIconStyle& other );
-    explicit GeoDataIconStyle( const QPixmap& icon, 
+    explicit GeoDataIconStyle( const QImage& icon,
                                const QPointF &hotSpot = QPointF( 0.5, 0.5 ) );
     ~GeoDataIconStyle();
 
@@ -40,8 +40,8 @@ class GEODATA_EXPORT GeoDataIconStyle : public GeoDataColorStyle
     /// Provides type information for downcasting a GeoData
     virtual const char* nodeType() const;
 
-    void setIcon( const QPixmap& icon );
-    QPixmap icon() const;
+    void setIcon( const QImage& icon );
+    QImage icon() const;
 
     void setIconPath( const QString& filename );
     QString iconPath() const;
